tests/tests_p1/pass/prof/45ok.min
program
	function number bigger number x; number y do
		y!
		return x+y
start
	bigger(2,3)!
end
