tests/tests_p1/fail/prof/24wrongret.min
program
	function number bigger number x; number y do
		if x > y then
			x!
			return "big"
		fi
		y!
		return y
start
	bigger(2,3)!
end
